# investor

./: .env.example  .gitignore  README.md  commitlint.config.js  cs.md  docker-compose.yml  er.mermaid  eslint.config.mjs  insight.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json  turbo.json  workflow.md
.robot/: log.html  output.xml  report.html
apps/api/: .dockerignore  Dockerfile  eslint.config.mjs  nest-cli.json  package.json  sonar-project.properties  tsconfig.build.json  tsconfig.json  vitest.config.mjs
apps/doc/: Dockerfile  eslint.config.mjs  next.config.ts  package.json  tsconfig.json  vitest.config.mjs  vitest.setup.ts
apps/e2e/: log.html  output.xml  package.json  pyproject.toml  report.html  variables.py
apps/e2e/resources/: util.resource
apps/e2e/results/: log.html  output.xml  report.html
apps/e2e/tests/01_system/: 01_health.robot
apps/e2e/tests/02_auth/: 01_check-email.robot  02_register.robot  03_recover.robot  04_2fa.robot  05_refresh.robot  06_sso.robot
apps/e2e/tests/03_device/: 01_device.robot
apps/e2e/tests/04_user/: 01_profile.robot  02_document.robot
db/: changelog.xml
db/migrations/: 000-create-extensions.xml  001-create-table-user.xml  002-create-table-device.xml  003-create-table-login.xml  004-create-table-asset.xml  004-create-table-ledger.xml  005-create-table-notice.xml  006-create-table-ticket.xml  007-create-table-withdrawal.xml  008-create-table-asset.xml  008-create-table-ledger.xml  009-create-table-strategy.xml  010-create-table-investment.xml  011-create-table-earning.xml  (+6 more)
(+922 files in other folders)
